# certificate

./: .env.example  .gitignore  README.md  flake.nix  pyproject.toml
src/: notebook.py
